--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,20 +6,21 @@ extra_css: ['https://fiware.org/style/fiware_readthedocs.css', 'css/mkdocs.css']
 #google_analytics: ['UA-84269043-1', 'wirecloud.readthedocs.io']
 
 pages:
-- 'Architecture': 'architecture.md'
-- 'Logs & Alarms': 'documentation/logs.md'
+- 'Introduction': 'index.md'
+- 'Architecture': 'legacy/architecture.md'
+- 'Logs & Alarms': 'legacy/logs.md'
 - 'O&M':
-	- 'Deployment': 'documentation/deployment.md'
-	- 'Configuration': 'documentation/configuration.md'
-	- 'Administration' : 'documentation/admin.md'
-	- 'Metrics API': 'documentation/metrics_api.md'
-
-- 'Open API' : 'documentation/api.md'
-	- 'Plain rules': 'documentation/plain_rules.md'
-	- 'Errors': 'documentation/errors.md'
-- 'Data model': 'documentation/models.md'
-- 'Available actions for PEP': 'documentation/pep_actions.md'
-- 'Documentation for developers of perseo': 'documentation/development.md'
+    - 'Deployment': 'legacy/deployment.md'
+    - 'Configuration': 'legacy/configuration.md'
+    - 'Administration': 'legacy/admin.md'
+    - 'Metrics API': 'legacy/metrics_api.md'
+- 'Open API': 
+    - 'API overview': 'legacy/api.md'
+    - 'Plain rules': 'legacy/plain_rules.md'
+    - 'Errors': 'legacy/errors.md'
+- 'Data model': 'legacy/models.md'
+- 'Available actions for PEP': 'legacy/pep_actions.md'
+- 'Documentation for developers of perseo': 'legacy/development.md'
 
 markdown_extensions:
     - markdown_github.headerid
