--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.4'
 services:
     perseo-mongo:
         image: mongo:3.2
@@ -11,16 +11,21 @@ services:
             restart_policy:
                 condition: on-failure
     perseo-core:
-        image: telefonicaiot/perseo-core:1.1.0
-        command: -perseo_fe_url perseo-fe:9090
+        #image: telefonicaiot/perseo-core:1.1.0
+        image: fiware/perseo-core
+        environment:
+            - PERSEO_FE_URL=http://perseo-fe:9090
+            - MAX_AGE=6000
         networks:
             - perseo
+        depends_on:
+            - perseo-mongo
         deploy:
             replicas: 1
             restart_policy:
                 condition: on-failure
     perseo-fe:
-        image: perseo-fe2
+        image: fiware/perseo-fe
         networks:
             perseo:
             main:
@@ -32,7 +37,7 @@ services:
             - PERSEO_MONGO_ENDPOINT=perseo-mongo
             - PERSEO_CORE_URL=http://perseo-core:8080
             - PERSEO_LOG_LEVEL=debug
-            - PERSEO_ORION_URL=https://context.opplafy.eu/v1/updateContext
+            - PERSEO_ORION_URL=http://orion:1026/
             - PERSEO_SMTP_HOST=www.ficodes.com
             - PERSEO_SMTP_PORT=25
             - PERSEO_SMTP_SECURE=false
