--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express": "^4.7.2",
     "logops": "1.0.0-alpha.7",
     "mongodb": "^2.2.19",
+    "ngsijs": "^1.1.0",
     "nodemailer": "^1.1.1",
     "nodemailer-smtp-transport": "^0.1.12",
     "request": "^2.39.0",
