--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "grunt"
   },
   "devDependencies": {
-    "chai": "~1.8.0",
+    "chai": "~4.1.2",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-jshint": "~0.6.4",
@@ -38,9 +38,10 @@
     "istanbul": "^0.4.5",
     "mocha": "~1.13.0",
     "proxyquire": "0.5.1",
+    "rewire": "^4.0.1",
     "should": "8.2.2",
-    "sinon": "~1.7.3",
-    "sinon-chai": "2.4.0"
+    "sinon": "~6.1.0",
+    "sinon-chai": "3.2.0"
   },
   "keywords": [],
   "dependencies": {
