--- a/documentation/API/perseo-api.yml
+++ b/documentation/API/perseo-api.yml
@@ -28,6 +28,10 @@ paths:
       summary: Notify Perseo
       description: Perseo listens in this endpopint, waiting for NGSI notifications
       operationId: newNotification
+      parameters:
+        - $ref: '#/components/parameters/service'
+        - $ref: '#/components/parameters/servicePath'
+        - $ref: '#/components/parameters/correlatorID'
       requestBody:
         $ref: '#/components/requestBodies/Notice'
       responses:
@@ -41,6 +45,10 @@ paths:
       summary: List All Rules
       description: Returns complete rule list
       operationId: gelAllRules
+      parameters:
+        - $ref: '#/components/parameters/service'
+        - $ref: '#/components/parameters/servicePath'
+        - $ref: '#/components/parameters/correlatorID'
       responses:
         '200':
           $ref: '#/components/responses/Rules'
@@ -50,6 +58,10 @@ paths:
       summary: Add new rule
       description: Add new Rule in Perseo
       operationId: addNewRule
+      parameters:
+        - $ref: '#/components/parameters/service'
+        - $ref: '#/components/parameters/servicePath'
+        - $ref: '#/components/parameters/correlatorID'
       requestBody:
         $ref: '#/components/requestBodies/Rule'
       responses:
@@ -65,6 +77,9 @@ paths:
       description: returns the rule named ruleName information
       operationId: getRuleByName
       parameters:
+        - $ref: '#/components/parameters/service'
+        - $ref: '#/components/parameters/servicePath'
+        - $ref: '#/components/parameters/correlatorID'
         - in: path
           name: ruleName
           required: true
@@ -82,6 +97,9 @@ paths:
       description: Delete a Perseo Rule
       operationId: deleteRule
       parameters:
+        - $ref: '#/components/parameters/service'
+        - $ref: '#/components/parameters/servicePath'
+        - $ref: '#/components/parameters/correlatorID'
         - in: path
           name: ruleName
           required: true
@@ -503,6 +521,8 @@ components:
             required:
               - error
               - data
+      headers:
+        - $ref: '#/components/parameters/correlatorID'
 
     DeletedRule:
       description: Rule Deleted
@@ -523,6 +543,8 @@ components:
             required:
               - error
               - data
+      headers:
+        - $ref: '#/components/parameters/correlatorID'
 
     LogInfo:
       description: Log level Information
@@ -535,6 +557,8 @@ components:
             properties:
               level:
                 $ref: '#/components/schemas/LogLevel'
+      headers:
+        - $ref: '#/components/parameters/correlatorID'
 
     Version:
       description: Perseo Version
@@ -561,3 +585,34 @@ components:
             required:
               - error
               - data
+      headers:
+        - $ref: '#/components/parameters/correlatorID'
+
+  parameters:
+
+    correlatorID:
+      name: fiware-correlator
+      description: An ID. This header field is taken from the incoming request (or created if not present) and sent to every external system
+      in: header
+      required: false
+      schema:
+        type: string
+        example: bfd2493c-a7ee-49ef-a932-67b0a0578e43; perseocep=27
+
+    service:
+      name: Fiware-Service
+      description: Fiware Service
+      in: header
+      required: false
+      schema:
+        type: string
+        example: serviceExample
+
+    servicePath:
+      name: Fiware-ServicePath
+      description: Fiware Service path
+      in: header
+      required: false
+      schema:
+        type: string
+        example: /demo/example/api
