--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,26 +1,20 @@
 site_name: Perseo Context-aware Complex Event Processing
-site_description: Perseo Documentation
-repo_url: https://github.com/Ficodes/perseo-fe
+site_url: https://perseo.readthedocs.org
+site_description: Perseo CEP Documentation
+repo_url: https://github.com/Ficodes/perseo-fe/tree/newdocumentation
 theme: readthedocs
-extra_css: ['https://fiware.org/style/fiware_readthedocs.css', 'css/mkdocs.css']
+docs_dir: documentation
+site_dir: html
+extra_css: ["https://fiware.org/style/fiware_readthedocs.css", "https://www.fiware.org/style/fiware_readthedocs_processing.css"]
 #google_analytics: ['UA-84269043-1', 'wirecloud.readthedocs.io']
 
 pages:
 - 'Introduction': 'index.md'
-- 'Architecture': 'legacy/architecture.md'
-- 'Logs & Alarms': 'legacy/logs.md'
-- 'O&M':
-    - 'Deployment': 'legacy/deployment.md'
-    - 'Configuration': 'legacy/configuration.md'
-    - 'Administration': 'legacy/admin.md'
-    - 'Metrics API': 'legacy/metrics_api.md'
-- 'Open API': 
-    - 'API overview': 'legacy/api.md'
-    - 'Plain rules': 'legacy/plain_rules.md'
-    - 'Errors': 'legacy/errors.md'
-- 'Data model': 'legacy/models.md'
-- 'Available actions for PEP': 'legacy/pep_actions.md'
-- 'Documentation for developers of perseo': 'legacy/development.md'
+- 'Installation & Administration Manual': 'setup.md'
+- 'User Guide': 'usermanual.md'
+- 'API': 'api.md'
+- 'Testing': 'testing.md'
+- 'Legacy documentation': 'legacy.md'
 
 markdown_extensions:
     - markdown_github.headerid
