Tryin to expand StructuredValue and objects as json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "perseo",
   "description": "IOT CEP front End",
-  "version": "1.7.0-ficodes1",
+  "version": "1.7.0-ficodes2b3",
   "homepage": "",
   "author": {
     "name": "crbrox",
