--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ node_js:
 branches:
   only:
     - master
+    - feature/documentation
 
 services:
  - mongodb
@@ -27,5 +28,6 @@ before_install:
 before_script:
  - npm run lint
 
-after_script:
+after_script: 
   - npm run test:coveralls
+
